--- a/chall5.html
+++ b/chall5.html
@@ -8,10 +8,20 @@
 <body>
     <form id="form">
         <input type="text" id="inputField" placeholder="Enter text">
-        <button type="submit">Submit</button>
+        <button type="button" onclick="dispError()">Submit</button>
         <p id="error" style="color: red; display: none;">Field is required!</p>
     </form>
     <script>
-        document.getElementById('form').addEventListener()
+        let A = document.getElementById('inputField');
+        let B = document.getElementById('error');
+        
+        function dispError() {    
+            if (A.value == '') { 
+                B.style.display='block'
+            } else {
+                B.style.display='none'
+            }
+        }
     </script>
+
 </body>
